unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/loan__Interest_Posting_Transaction__c.object-meta.xml
<CustomObject>
    <label>Interest Posting Transaction</label>
    <nameField>
        <displayFormat>IPT-{00000000}</displayFormat>
        <label>Interest Posting Transaction Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest Posting Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>