unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Accrued_To_Investor__c.field-meta.xml
<CustomField>
    <fullName>loan__Accrued_To_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be marked as true when investor accrual for closed IOA is done</description>
    <label>Accrued to Investor</label>
    <type>Checkbox</type>
</CustomField>