unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Amortization_Schedule__c.field-meta.xml
<CustomField>
    <fullName>loan__Amortization_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This fields defines a one to one mapping between amortisation schedule and regular Interest Posting Transaction for Flexible Amz Loans.</description>
    <label>Amortization Schedule</label>
    <referenceTo>loan__Repayment_Schedule__c</referenceTo>
    <relationshipLabel>Interest Posting Transactions</relationshipLabel>
    <relationshipName>Interest_Posting_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>