unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Capitalization_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Capitalization_Date__c</fullName>
    <label>Capitalization Date</label>
    <type>Date</type>
</CustomField>