unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Current_Interest_Accrued_On_Principal__c.field-meta.xml
<CustomField>
    <fullName>loan__Current_Interest_Accrued_On_Principal__c</fullName>
    <label>Current Interest Accrued On Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>