unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Discarded__c.field-meta.xml
<CustomField>
    <fullName>loan__Discarded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will represent that the record is no longer in use as it is discarded via. some action like Reschedule.</description>
    <label>Discarded</label>
    <type>Checkbox</type>
</CustomField>