unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Interest_Posting_Transaction_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Posting_Transaction_Snapshot__c</fullName>
    <label>Interest Posting Transaction Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>