unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Interest_Posting_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Posting_Type__c</fullName>
    <label>Interest Posting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Excess PayOff</fullName>
            </value>
            <value>
                <fullName>Interest Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>