unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Interest_UnPaid__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_UnPaid__c</fullName>
    <label>Interest unPaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>