unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__IOA_Summary__c.field-meta.xml
<CustomField>
    <fullName>loan__IOA_Summary__c</fullName>
    <label>IOA Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>