unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Is_Capitalized__c.field-meta.xml
<CustomField>
    <fullName>loan__Is_Capitalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capitalized</label>
    <type>Checkbox</type>
</CustomField>