unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Last_Accrual_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Last_Accrual_Date__c</fullName>
    <label>Last Accrual Date</label>
    <type>Date</type>
</CustomField>