unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Level__c.field-meta.xml
<CustomField>
    <fullName>loan__Level__c</fullName>
    <description>Level is use to indicate the depth of an IOA Tree. This is for Internal use.</description>
    <inlineHelpText>Level is use to indicate the depth of an IOA Tree. This is for Internal use.</inlineHelpText>
    <label>Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>