unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Loan_Contract__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CL Contract</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipLabel>Interest Posting Transactions</relationshipLabel>
    <relationshipName>Interest_Posting_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>