unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Parent_Interest_Posting_Transaction__c.field-meta.xml
<CustomField>
    <fullName>loan__Parent_Interest_Posting_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Interest Posting Transaction</label>
    <referenceTo>loan__Interest_Posting_Transaction__c</referenceTo>
    <relationshipLabel>Interest Posting Transactions (Parent Interest Posting Transaction)</relationshipLabel>
    <relationshipName>Interest_Posting_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>