unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Payment_Date__c</fullName>
    <inlineHelpText>Date on which Interest Posting Transaction is fully paid</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>