unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Principal_Paid__c.field-meta.xml
<CustomField>
    <fullName>loan__Principal_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Arrear Principal Paid. Only used for AMZ Based Loans.</inlineHelpText>
    <label>Principal Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>