unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Principal_Posted__c.field-meta.xml
<CustomField>
    <fullName>loan__Principal_Posted__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Arrear Principal Posted. Used only for AMZ Based Loans.</inlineHelpText>
    <label>Principal Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>