unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Principal_Remaining__c.field-meta.xml
<CustomField>
    <fullName>loan__Principal_Remaining__c</fullName>
    <label>Principal Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>