unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Reversed__c.field-meta.xml
<CustomField>
    <fullName>loan__Reversed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reversed</label>
    <type>Checkbox</type>
</CustomField>