unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Status__c.field-meta.xml
<CustomField>
    <fullName>loan__Status__c</fullName>
    <description>Ipt Bucket will open at the start of due cycle and close at the due date.</description>
    <inlineHelpText>Ipt Bucket will open at the start of due cycle and close at the due date.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>