unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Transaction_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Transaction_Posting_Date__c</fullName>
    <label>Transaction Posting Date</label>
    <type>Date</type>
</CustomField>