unpackaged/main/default/objects/loan__Interest_Posting_Transaction__c/fields/loan__Transaction_Time__c.field-meta.xml
<CustomField>
    <fullName>loan__Transaction_Time__c</fullName>
    <description>Time stamp at which the transaction happened</description>
    <label>Transaction Time</label>
    <type>DateTime</type>
</CustomField>